--- a/src/main/resources/assets/ff/lang/en_us.lang
+++ b/src/main/resources/assets/ff/lang/en_us.lang
@@ -2,3 +2,4 @@ entity.hibbertopterus.name=Hibbertopterus
 tile.fossil.name=Fossil
 item.hibbertopterus_fossil.name=Hibbertopterus Fossil
 item.rhizodus_fossil.name=Rhizodus Fossil
+entity.rhizodus.name=Rhizodus
